# trace-weaver

./: .claude.md  .dockerignore  .gitignore  .gitleaks.toml  .hadolint.yaml  .semgrepignore  .trivyignore  CHANGELOG.md  Cargo.toml  Dockerfile  Dockerfile.render  Makefile  README.md  TRACEABLE_PIPELINES.md  docker-compose.yml  handoff.md  pyproject.toml  ruff.toml
.github/workflows/: ci.yml  publish.yml  release.yml
ci/: ai_scan.py
crates/trace-weaver-cli/: Cargo.toml
crates/trace-weaver-cli/src/: main.rs
crates/trace-weaver-cli/tests/: gate.rs
crates/trace-weaver-core/: Cargo.toml
crates/trace-weaver-core/src/: graph.rs  lib.rs  model.rs  origin.rs  validate.rs
crates/trace-weaver-export/: Cargo.toml
crates/trace-weaver-export/src/: dot.rs  lib.rs  openlineage.rs  openmetadata.rs
crates/trace-weaver-scan/: Cargo.toml
crates/trace-weaver-scan/src/: dataflow.rs  infer.rs  lib.rs  python.rs  resolve.rs  sql.rs
crates/trace-weaver-scan/tests/: e2e_medallion.rs
database/migrations/: 001_create_lineage_tables.sql
docs/: architecture.md  limitations.md  output-schema.md
examples/dags/: medallion.py
examples/sample_dags/: declared_lineage.py  dependencies_dag.py  simple_python_operator.py  sql_operator_dag.py  taskflow_dag.py  warehouse_merge_dag.py
python/: pyproject.toml
python/tests/: test_lineage.py
python/trace_weaver/: __init__.py  decorators.py
src/traceweaver/: __main__.py  cli.py  confidence.py  models.py
src/traceweaver/exporters/: csv_exporter.py  db_exporter.py  json_exporter.py  mermaid_exporter.py
src/traceweaver/scanners/: datasets.py  git_source.py  operations.py  python_ast_scanner.py  repo_scanner.py  sql_lineage.py  sql_scanner.py
tests/: support.py  test_cli.py  test_confidence.py  test_datasets.py  test_db_exporter.py  test_dependencies.py  test_git_source.py  test_mermaid_exporter.py  test_operations.py  test_scan_sample_dags.py  test_sql_lineage.py  test_sql_sources.py
