[package]
name = "trace-weaver-cli"
description = "The `trace-weaver` command-line data-lineage compiler."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "trace-weaver"
path = "src/main.rs"

[dependencies]
trace-weaver-core.workspace = true
trace-weaver-scan.workspace = true
trace-weaver-export.workspace = true
anyhow.workspace = true
clap.workspace = true
serde_json.workspace = true
