[package]
name = "trace-weaver-scan"
description = "Scan Python DAG code (@tw.task) into a weave document; SQL & code lineage inference."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
trace-weaver-core.workspace = true
anyhow.workspace = true
thiserror.workspace = true
walkdir.workspace = true
rustpython-parser.workspace = true
sqlparser.workspace = true
serde_json.workspace = true
